--- a/templates/chooseHairColor.html
+++ b/templates/chooseHairColor.html
@@ -69,15 +69,15 @@
 
                 <div class="flex justify-end mt-6">
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                        <button onclick="window.location.href='chooseDeatelnost.html'">
-                            <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="">
+                        <button type="submit" name="action" value="previous">
+                            <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
-                        <button onclick="window.location.href='chooseSizeTopWoman.html'">
-                            <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="">
+                        <button type="submit" name="action" value="next">
+                            <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="Next">
                         </button>
                     </div>
                 </div>
