--- a/templates/choosePosadka.html
+++ b/templates/choosePosadka.html
@@ -52,14 +52,14 @@
                         <!-- Navigation Buttons -->
                         <div class="flex justify-end mt-6">
                             <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                                <button type="button" onclick="window.location.href='{{ url_for('skin10') }}'">
+                                <button type="submit" name="action" value="previous">
                                     <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                                 </button>
                                 
                                 <!-- Separator -->
                                 <div class="w-1 h-8 bg-customBlack mx-2"></div>
                                 
-                                <button type="submit">
+                                <button type="submit" name="action" value="next">
                                     <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="Next">
                                 </button>
                             </div>
