--- a/templates/chooseSizeTopWoman.html
+++ b/templates/chooseSizeTopWoman.html
@@ -88,24 +88,24 @@
                                 <label for="home4">56 (XXL)</label>
                             </div>
                         </div>
+
+                        <!-- Navigation Buttons - Moved inside form -->
+                        <div class="col-span-2 flex justify-end mt-6">
+                            <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
+                                <button type="submit" name="action" value="previous">
+                                    <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
+                                </button>
+                                
+                                <!-- Separator -->
+                                <div class="w-1 h-8 bg-customBlack mx-2"></div>
+                                
+                                <button type="submit" name="action" value="next">
+                                    <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="Next">
+                                </button>
+                            </div>
+                        </div>
                     </form>
                 </div>
-
-                <div class="flex justify-end mt-6">
-                    <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                        <button onclick="window.location.href='chooseHairColor.html'">
-                            <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="">
-                        </button>
-                        
-                        <!-- Separator -->
-                        <div class="w-1 h-8 bg-customBlack mx-2"></div>
-                        
-                        <button onclick="window.location.href='chooseSizeBottomWoman.html'">
-                            <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="">
-                        </button>
-                    </div>
-                </div>
-                
             </div>
 
             <!-- Green and Black Stripes -->
