--- a/templates/chooseWork.html
+++ b/templates/chooseWork.html
@@ -99,14 +99,14 @@
                         <!-- Navigation Buttons -->
                         <div class="flex justify-end mt-6 md:col-span-2">
                             <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                                <button type="button" onclick="window.location.href='{{ url_for('previousPage') }}'">
-                                    <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="">
+                                <button type="submit" name="action" value="previous">
+                                    <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                                 </button>
                                 
                                 <div class="w-1 h-8 bg-customBlack mx-2"></div>
                                 
-                                <button type="submit">
-                                    <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="">
+                                <button type="submit" name="action" value="next">
+                                    <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="Next">
                                 </button>
                             </div>
                         </div>
