--- a/templates/skin1.html
+++ b/templates/skin1.html
@@ -25,7 +25,7 @@
 
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
-                    <form method="post" action="/submit-likes">
+                    <form method="post">
                         <div class="flex justify-center items-center">
                             <img src="{{ url_for('static', filename= 'assets/img/png/skin1.png') }}" alt="Логотип" class="max-w-full h-auto">
                         </div>
@@ -57,14 +57,14 @@
 
                         <div class="flex justify-end mt-6">
                             <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                                <button onclick="window.location.href='previousPage.html'">
-                                    <img src="{{ url_for('static', filename= 'assets/img/png/prev.png') }}" alt="">
+                                <button type="submit" name="action" value="previous">
+                                    <img src="{{ url_for('static', filename= 'assets/img/png/prev.png') }}" alt="Previous">
                                 </button>
                                 
                                 <div class="w-1 h-8 bg-customBlack mx-2"></div>
                                 
-                                <button onclick="window.location.href='/skin2'">
-                                    <img src="{{ url_for('static', filename= 'assets/img/png/next.png') }}" alt="">
+                                <button type="submit" name="action" value="next">
+                                    <img src="{{ url_for('static', filename= 'assets/img/png/next.png') }}" alt="Next">
                                 </button>
                             </div>
                         </div>
@@ -88,18 +88,18 @@
 
         <script>
             function toggleCheckboxImage(clickedId) {
-    const clickedImage = document.getElementById(clickedId);
-    const checkboxStateId = 'likeCheckboxState' + clickedId.slice(-1);
-    const checkboxState = document.getElementById(checkboxStateId);
-    
-    if (clickedImage.src.includes('likeWhite.svg')) {
-        clickedImage.src = './static/assets/img/svg/likeRed.svg';
-        checkboxState.value = 'true';
-    } else {
-        clickedImage.src = './static/assets/img/svg/likeWhite.svg';
-        checkboxState.value = 'false';
-    }
-}
+                const clickedImage = document.getElementById(clickedId);
+                const checkboxStateId = 'likeCheckboxState' + clickedId.slice(-1);
+                const checkboxState = document.getElementById(checkboxStateId);
+                
+                if (clickedImage.src.includes('likeWhite.svg')) {
+                    clickedImage.src = "{{ url_for('static', filename='assets/img/svg/likeRed.svg') }}";
+                    checkboxState.value = 'true';
+                } else {
+                    clickedImage.src = "{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}";
+                    checkboxState.value = 'false';
+                }
+            }
         </script>
 
     </body>
