--- a/templates/skin2.html
+++ b/templates/skin2.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./static/css/output.css">
-        <link rel="stylesheet" href="./static/css/customStyles.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
         <title>Document</title>
      </head>
      <body class="bg-customGray">
@@ -14,50 +14,50 @@
             <div class="w-full max-w-4xl">
 
                 <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                    <img src="./static/assets/img/svg/logo.svg" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/svg/logo.svg') }}" alt="">
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
                     <form method="post">
                         <div class="flex justify-center items-center">
-                            <img src="./static/assets/img/png/skin2.png" alt="Логотип" class="max-w-full h-auto">
+                            <img src="{{ url_for('static', filename='assets/img/png/skin2.png') }}" alt="Логотип" class="max-w-full h-auto">
                         </div>
 
                         <div class="absolute top-10 right-64">
-                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
                             <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="point1">
                         </div>
                         
                         <div class="absolute top-10 left-72">
-                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
                             <input type="hidden" id="likeCheckboxState2" name="likeCheckboxState2" value="point2">
                         </div>
                         
                         <div class="absolute top-72 left-72">
-                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
                             <input type="hidden" id="likeCheckboxState3" name="likeCheckboxState3" value="point3">
                         </div>
                         
                         <div class="absolute top-52 right-96">
-                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
                             <input type="hidden" id="likeCheckboxState4" name="likeCheckboxState4" value="point4">
                         </div>
                         
                         <div class="absolute top-72 right-64">
-                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
                             <input type="hidden" id="likeCheckboxState5" name="likeCheckboxState5" value="point5">
                         </div>
 
                         <div class="flex justify-end mt-6">
                             <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                                <button onclick="window.location.href='skin1.html'">
-                                    <img src="./static/assets/img/png/prev.png" alt="">
+                                <button type="submit" name="action" value="previous">
+                                    <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                                 </button>
                                 
                                 <div class="w-1 h-8 bg-customBlack mx-2"></div>
                                 
-                                <button onclick="window.location.href='/skin3'">
-                                    <img src="./static/assets/img/png/next.png" alt="">
+                                <button type="submit" name="action" value="next">
+                                    <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="Next">
                                 </button>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                         <p>Как вам образ?</p>
                     </div>
 
-                    <img src="./static/assets/img/png/janna-skin2.png" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/png/janna-skin2.png') }}" alt="">
                 </div>
 
                 <!-- Green and Black Stripes -->
@@ -81,17 +81,17 @@
 
         <script>
             function toggleCheckboxImage(clickedId) {
-    const clickedImage = document.getElementById(clickedId);
-    const checkboxState = document.getElementById(clickedId + 'State');
-    
-    if (clickedImage.src.includes('likeWhite.svg')) {
-        clickedImage.src = './static/assets/img/svg/likeRed.svg';
-        checkboxState.value = 'true';
-    } else {
-        clickedImage.src = './static/assets/img/svg/likeWhite.svg';
-        checkboxState.value = 'false';
-    }
-}
+                const clickedImage = document.getElementById(clickedId);
+                const checkboxState = document.getElementById(clickedId + 'State');
+                
+                if (clickedImage.src.includes('likeWhite.svg')) {
+                    clickedImage.src = "{{ url_for('static', filename='assets/img/svg/likeRed.svg') }}";
+                    checkboxState.value = 'true';
+                } else {
+                    clickedImage.src = "{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}";
+                    checkboxState.value = 'false';
+                }
+            }
         </script>
 
     </body>
