--- a/templates/skin6.html
+++ b/templates/skin6.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/output.css">
-        <link rel="stylesheet" href="/css/customStyles.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
         <title>Document</title>
      </head>
      <body class="bg-customGray">
@@ -14,51 +14,51 @@
             <div class="w-full max-w-4xl">
 
                 <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                    <img src="/assets/img/svg/logo.svg" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/svg/logo.svg') }}" alt="">
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
                     <form method="post">
                         <div class="flex justify-center items-center">
-                            <img src="/assets/img/png/skin6.png" alt="Логотип" class="max-w-full h-auto">
+                            <img src="{{ url_for('static', filename='assets/img/png/skin6.png') }}" alt="Логотип" class="max-w-full h-auto">
                         </div>
 
                         <div class="absolute top-10 right-64">
-                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
                             <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="1">
                         </div>
 
                         <div class="absolute top-32 left-96">
-                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
                             <input type="hidden" id="likeCheckboxState2" name="likeCheckboxState2" value="2">
                         </div>
 
                         <div class="absolute top-56 left-72">
-                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
                             <input type="hidden" id="likeCheckboxState3" name="likeCheckboxState3" value="3">
                         </div>
 
                         <div class="absolute top-64 left-96">
-                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
                             <input type="hidden" id="likeCheckboxState4" name="likeCheckboxState4" value="4">
                         </div>
 
                         <div class="absolute top-64 right-64">
-                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
                             <input type="hidden" id="likeCheckboxState5" name="likeCheckboxState5" value="5">
                         </div>
 
                         <div class="flex justify-end mt-6">
                             <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                                <button onclick="window.location.href='skin5.html'">
-                                    <img src="/assets/img/png/prev.png" alt="">
+                                <button type="submit" name="action" value="previous">
+                                    <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                                 </button>
                                 
                                 <!-- Separator -->
                                 <div class="w-1 h-8 bg-customBlack mx-2"></div>
                                 
-                                <button onclick="window.location.href='/skin7'">
-                                    <img src="/assets/img/png/next.png" alt="">
+                                <button type="submit" name="action" value="next">
+                                    <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="Next">
                                 </button>
                             </div>
                         </div>
@@ -71,7 +71,7 @@
                         <p>Как вам образ?</p>
                     </div>
 
-                    <img src="/assets/img/png/janna-skin6.png" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/png/janna-skin6.png') }}" alt="">
                 </div>
 
                 <!-- Green and Black Stripes -->
@@ -86,10 +86,10 @@
                 const otherImage = document.getElementById(otherId);
     
                 // Toggle the clicked image
-                clickedImage.src = clickedImage.src.includes('likeWhite.svg') ? '/assets/img/svg/likeRed.svg' : '/assets/img/svg/likeWhite.svg';
+                clickedImage.src = clickedImage.src.includes('likeWhite.svg') ? "{{ url_for('static', filename='assets/img/svg/likeRed.svg') }}" : "{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}";
     
                 // Change the state of the other image
-                otherImage.src = otherImage.src.includes('likeWhite.svg') ? '/assets/img/svg/likeRed.svg' : '/assets/img/svg/likeWhite.svg';
+                otherImage.src = otherImage.src.includes('likeWhite.svg') ? "{{ url_for('static', filename='assets/img/svg/likeRed.svg') }}" : "{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}";
             }
         </script>
 
