--- a/templates/skin8.html
+++ b/templates/skin8.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/output.css">
-        <link rel="stylesheet" href="/css/customStyles.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
         <title>Document</title>
      </head>
      <body class="bg-customGray">
@@ -14,17 +14,17 @@
             <div class="w-full max-w-4xl">
 
                 <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                    <img src="/assets/img/svg/logo.svg" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/svg/logo.svg') }}" alt="">
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
                     <form method="post">
                         <div class="flex justify-center items-center">
-                            <img src="/assets/img/png/skin8.png" alt="Логотип" class="max-w-full h-auto">
+                            <img src="{{ url_for('static', filename='assets/img/png/skin8.png') }}" alt="Логотип" class="max-w-full h-auto">
                         </div>
 
                         <div class="absolute top-10 right-64">
-                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                            <img src="{{ url_for('static', filename='assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
                             <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="like1">
                         </div>
 
@@ -50,15 +50,15 @@
 
                         <div class="flex justify-end mt-6">
                             <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                                <button onclick="window.location.href='skin7.html'">
-                                    <img src="/assets/img/png/prev.png" alt="">
+                                <button type="submit" name="action" value="previous">
+                                    <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                                 </button>
                                 
                                 <!-- Separator -->
                                 <div class="w-1 h-8 bg-customBlack mx-2"></div>
                                 
-                                <button onclick="window.location.href='/skin9'">
-                                    <img src="/assets/img/png/next.png" alt="">
+                                <button type="submit" name="action" value="next">
+                                    <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="Next">
                                 </button>
                             </div>
                         </div>
@@ -71,7 +71,7 @@
                         <p>Как вам образ?</p>
                     </div>
 
-                    <img src="/assets/img/png/janna-skin8.png" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/png/janna-skin8.png') }}" alt="">
                 </div>
 
                 <!-- Green and Black Stripes -->
