--- a/templates/targetWoman.html
+++ b/templates/targetWoman.html
@@ -115,14 +115,14 @@
 
                 <div class="flex justify-end mt-6">
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                        <button onclick="window.location.href='previousPage.html'">
+                        <button name="action" value="prev">
                             <img src="./static/assets/img/png/prev.png" alt="">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
-                        <button onclick="window.location.href='confirmStyle.html'">
+                        <button name="action" value="next">
                             <img src="./static/assets/img/png/next.png" alt="">
                         </button>
                     </div>
