--- a/templates/chooseClientOrStyle.html
+++ b/templates/chooseClientOrStyle.html
@@ -28,14 +28,14 @@
                      <label for="male" class="w-full">
                         <input type="radio" id="male" name="gender" value="male" class="hidden peer">
                         <div class="w-full px-6 py-3 bg-gray-300 text-gray-800 font-bold rounded-lg text-center peer-checked:bg-black peer-checked:text-white transition duration-300 cursor-pointer">
-                           <a href="/registrationCL">Клиент</a>
+                           <a href="{{url_for('registrationCL_page')}}">Клиент</a>
                         </div>
                      </label>
                      <!-- Радиокнопка для Женского пола -->
                      <label for="female" class="w-full">
                         <input type="radio" id="female" name="gender" value="female" class="hidden peer">
                         <div class="w-full px-6 py-3 bg-gray-300 text-gray-800 font-bold rounded-lg text-center peer-checked:bg-black peer-checked:text-white transition duration-300 cursor-pointer">
-                           <a href="/registrationST">Стилист</a>
+                           <a href="{{url_for('registrationST_page')}}">Стилист</a>
                         </div>
                      </label>
                   </div>
